--- a/styleguide/scss/core/_core-typography.scss
+++ b/styleguide/scss/core/_core-typography.scss
@@ -205,6 +205,7 @@ hr {
     & > div {
 
         padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
         text-align: right;
         color: rgba(0, 0, 0, 0.25);
         font-size: 0.8rem;
@@ -290,20 +291,20 @@ hr {
 
             @include sf-media($upto: tablet-portrait) {
 
-                padding-left: var(--horizontal-unit-padding);
-                padding-right: calc(var(--horizontal-unit-padding) * 2);
+                padding-left: var(--horizontal-unit-padding / 2);
+                padding-right: calc(var(--horizontal-unit-padding) * 1);
             }
 
             @include sf-media($from: phablet, $upto: tablet-portrait) {
 
-                padding-left: var(--phablet-horizontal-unit-padding);
-                padding-right: calc(var(--phablet-horizontal-unit-padding) * 2);
+                padding-left: var(--phablet-horizontal-unit-padding / 2);
+                padding-right: calc(var(--phablet-horizontal-unit-padding) * 1);
             }
 
             @include sf-media($from: tablet-portrait) {
 
-                padding-left: 1rem;
-                padding-right: 1rem;
+                padding-left: 0.5rem;
+                padding-right: 0.5rem;
             }
 
             & > pre {
@@ -315,6 +316,8 @@ hr {
                 width: 100%;
                 width: max-content;
                 width: -webkit-max-content;
+                padding: 0.5rem;
+                margin: 0;
             }
         }
     }
