--- a/styleguide/scss/core/_core-forms.scss
+++ b/styleguide/scss/core/_core-forms.scss
@@ -580,66 +580,67 @@ form, [role="form"] {
             display: inline-block;
             cursor: pointer;
             font-size: 0;
-            line-height: 1.2;
+            line-height: 1.4;
             overflow: visible;
 
-            i {
-                font-size: 1.2rem;
-                color: #c8c8c8;
-            }
-
-            & > i {
-
-                display: none;
-                color: var(--sf-color-success);
-            }
-
-            span.stack {
+            span {
 
                 display: inline-block;
                 position: relative;
                 margin: 0;
-                height: 1.2rem;
-                width: 1.2rem;
-                line-height: 1.2rem;
                 vertical-align: top;
                 overflow: visible;
+                cursor: pointer;
 
-                i {
+                &:nth-of-type(1) {
 
-                    display: inline-block;
-                    position: absolute;
-                    top: 0;
-                    left: 0;
+                    line-height: 0;
+                    padding: 0.1rem;
+                    height: 1.4rem;
+                    width: 1.4rem;
+    
+                    img {
 
-                    &:nth-of-type(1) {
-
-                        color: #f8f8f8;
+                        display: block;
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        height: 1.2rem;
+                        width: 1.2rem;
+        
+                        & + img {
+        
+                            display: none;
+                        }
                     }
                 }
-            }
 
-            [sf-radio-label] {
+                &:nth-of-type(2) {
 
-                display: inline-block;
-                padding-left: 0.5rem;
-                font-size: 1rem;
-                max-width: calc(100% - 1.2rem);
+                    height: auto;
+                    padding-left: 0.25rem;
+                    font-size: 1rem;
+                    width: calc(100% - 1.4rem);
+                }
             }
         }
 
         [type="radio"]:checked + label {
 
-            & > i {
+            span {
 
-                display: inline-block;
-                vertical-align: top;
-                line-height: 1.2rem;                
-            }
+                &:nth-of-type(1) {
 
-            span.stack {
+                    img {
 
-                display: none;
+                        display: none;
+
+                        & + img {
+        
+                            display: block;
+                        }
+                    }
+                }
             }
         }
     }
