--- a/styleguide/scss/core/_core-typography.scss
+++ b/styleguide/scss/core/_core-typography.scss
@@ -146,7 +146,7 @@ small {
 
         display: inline-block;
         margin: 0;
-        padding: 0.1rem 0.5rem;
+        padding: 0.05rem 0.5rem 0.15rem 0.5rem;
         border-radius: 0.1rem;
 
         font-size: 0.8rem;
